Fix some details in styling and avoid a weird overflow on mobile

--- a/assets/styles/base/boostrap-overrides.less
+++ b/assets/styles/base/boostrap-overrides.less
@@ -5,14 +5,17 @@
 /* Enable the scroll on panels */
 
 .panel-body {
-  height: 530px;
+  max-height: 530px;
   overflow: auto;
 }
 
 .search-box {
-  border: none;
+  width: 50%;
+
   margin: 0 0 0 20px;
   padding: 2px 5px;
+
+  border: none;
   color: black;
 }
 
@@ -29,4 +32,8 @@
     border-top-color:  #18bc9c!important;
     border-left-color: #18bc9c!important;
   }
+}
+
+.cal-heatmap-container {
+  margin: 0 auto;
 }
